@@ -64,6 +64,10 @@ load_biom,
 load_meta,
 load_metaQ,
 load_phenoData,
+loadBiom,
+loadMeta,
+loadMetaQ,
+loadPhenoData,
 makeLabels,
 mergeMRexperiments,
 MRcoefs,
