@@ -13,7 +13,11 @@
 #'  parameters to be passed to the modern version of the function (see table).
 #' @docType package
 #' @export fitMeta
-#' @aliases deprecated_metagenomeSeq_function fitMeta
+#' @aliases deprecated_metagenomeSeq_function fitMeta load_phenoData load_meta load_biom load_metaQ
 #'
 deprecated_metagenomeSeq_function <- function(x, value, ...){return(NULL)}
 fitMeta <- function(...){.Deprecated("fitMeta",package="metagenomeSeq");return(fitLogNormal(...))}
+load_phenoData <- function(...){.Deprecated("load_phenoData",package="metagenomeSeq");return(loadPhenodata(...))}
+load_biom <- function(...){.Deprecated("load_biom",package="metagenomeSeq");return(loadBiom(...))}
+load_meta <- function(...){.Deprecated("load_meta",package="metagenomeSeq");return(loadMeta(...))}
+load_metaQ <- function(...){.Deprecated("load_metaQ",package="metagenomeSeq");return(loadMetaQ(...))}
