@@ -3,17 +3,17 @@
 #' Load a matrix of OTUs in a tab delimited format
 #' 
 #' 
-#' @aliases load_meta metagenomicLoader
+#' @aliases loadMeta metagenomicLoader
 #' @param file Path and filename of the actual data file.
 #' @param sep File delimiter.
 #' @return A list with objects 'counts' and 'taxa'.
-#' @seealso \code{\link{load_phenoData}}
+#' @seealso \code{\link{loadPhenoData}}
 #' @examples
 #' 
 #' dataDirectory <- system.file("extdata", package="metagenomeSeq")
-#' lung = load_meta(file.path(dataDirectory,"CHK_NAME.otus.count.csv"))
+#' lung = loadMeta(file.path(dataDirectory,"CHK_NAME.otus.count.csv"))
 #' 
-load_meta <- function(file,sep="\t")
+loadMeta <- function(file,sep="\t")
 {
 	dat2 <- read.table(file,header=FALSE,sep=sep,nrows=1,stringsAsFactors=FALSE);
 	subjects <- as.character(dat2[1,-1]);
