@@ -3,18 +3,18 @@
 #' Load a matrix of metadata associated with a study.
 #' 
 #' 
-#' @aliases load_phenoData phenoData
+#' @aliases loadPhenoData phenoData
 #' @param file Path and filename of the actual clinical file.
 #' @param tran Boolean. If the covariates are along the columns and samples
 #' along the rows, then tran should equal TRUE.
 #' @param sep The separator for the file.
 #' @return The metadata as a dataframe.
-#' @seealso \code{\link{load_meta}}
+#' @seealso \code{\link{loadMeta}}
 #' @examples
 #' 
 #' # see vignette
 #' 
-load_phenoData <-function(file,tran=TRUE,sep="\t")
+loadPhenoData <-function(file,tran=TRUE,sep="\t")
 {
 	dat2 <- read.table(file,header=FALSE,sep=sep);
 
