@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/load_biom.R
-\name{load_biom}
-\alias{load_biom}
+% Please edit documentation in R/loadBiom.R
+\name{loadBiom}
+\alias{loadBiom}
 \title{Load objects organized in the Biom format.}
 \usage{
-load_biom(file)
+loadBiom(file)
 }
 \arguments{
 \item{file}{The biom object filepath.}
@@ -19,10 +19,10 @@ Wrapper to load Biom formatted object.
 
 #library(biomformat)
 #rich_dense_file = system.file("extdata", "rich_dense_otu_table.biom", package = "biomformat")
-#x = load_biom(rich_dense_file)
+#x = loadBiom(rich_dense_file)
 #x
 }
 \seealso{
-\code{\link{load_meta}} \code{\link{load_phenoData}} \code{\link{newMRexperiment}} \code{\link{biom2MRexperiment}}
+\code{\link{loadMeta}} \code{\link{loadPhenoData}} \code{\link{newMRexperiment}} \code{\link{biom2MRexperiment}}
 }
 
