@@ -1,11 +1,11 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/load_metaQ.R
-\name{load_metaQ}
-\alias{load_metaQ}
+% Please edit documentation in R/loadMetaQ.R
+\name{loadMetaQ}
+\alias{loadMetaQ}
 \alias{qiimeLoader}
 \title{Load a count dataset associated with a study set up in a Qiime format.}
 \usage{
-load_metaQ(file)
+loadMetaQ(file)
 }
 \arguments{
 \item{file}{Path and filename of the actual data file.}
@@ -22,6 +22,6 @@ Load a matrix of OTUs in Qiime's format
 
 }
 \seealso{
-\code{\link{load_meta}} \code{\link{load_phenoData}}
+\code{\link{loadMeta}} \code{\link{loadPhenoData}}
 }
 
