@@ -1,11 +1,11 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/load_phenoData.R
-\name{load_phenoData}
-\alias{load_phenoData}
+% Please edit documentation in R/loadPhenoData.R
+\name{loadPhenoData}
+\alias{loadPhenoData}
 \alias{phenoData}
 \title{Load a clinical/phenotypic dataset associated with a study.}
 \usage{
-load_phenoData(file, tran = TRUE, sep = "\\t")
+loadPhenoData(file, tran = TRUE, sep = "\\t")
 }
 \arguments{
 \item{file}{Path and filename of the actual clinical file.}
@@ -27,6 +27,6 @@ Load a matrix of metadata associated with a study.
 
 }
 \seealso{
-\code{\link{load_meta}}
+\code{\link{loadMeta}}
 }
 
